# Autotools

./: README.md
src/: Makefile.am  autogen.sh  configure.ac
src/bar/: Makefile.am
src/foo/: Makefile.am  foo.c
src/main/: Makefile.am  main.c
src/main1/: Makefile.am
src/main2/: Makefile.am
